--- a/TaskBarSwitch/TaskBarSwitch.csproj
+++ b/TaskBarSwitch/TaskBarSwitch.csproj
@@ -8,6 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <ApplicationIcon>./asset/icon.ico</ApplicationIcon>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Svg.Skia" Version="2.0.0.4" />
   </ItemGroup>
