タスクラベルを「publish」から「Release」に変更

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
 			"label": "build"
 		},
 		{
-			"label": "publish",
+			"label": "Release",
 			"group": {
 				"kind": "build",
 				"isDefault": true
