--- a/TaskBarSwitch/TaskBarSwitch.csproj
+++ b/TaskBarSwitch/TaskBarSwitch.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Svg.Skia" Version="2.0.0.4" />
+    <PackageReference Include="System.Management" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
